# aoc

./: .gitignore  README.md
2015/: build.zig
2015/src/: day1.zig  day10.zig  day11.zig  day12.zig  day13.zig  day14.zig  day15.zig  day16.zig  day17.zig  day2.zig  day3.zig  day4.zig  day5.zig  day6.zig  day7.zig  day8.zig  day9.zig  math.zig
2016/: README2016.md  common.odin  day1.odin  day10.odin  day2.odin  day3.odin  day4.odin  day5.odin  day6.odin  day7.odin  day8.odin  day9.odin  main.odin
2019/: Cargo.toml  README.md  build.bat
2019/src/: common.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  main.rs
2020/: README.md  build.zig
2020/src/: day_01.zig  day_02.zig  day_03.zig  day_04.zig  day_05.zig  day_06.zig  day_07.zig  day_08.zig  day_09.zig  day_10.zig  day_11.zig  day_12.zig  day_13.zig  day_14.zig  day_15.zig  day_16.zig  day_17.zig  day_18.zig  day_19.zig  day_20.zig  day_21.zig  day_22.zig  day_23.zig  day_24.zig  day_25.zig
2021/: .gitignore  2019  README.MD  build.bat  day1.c  day2.c  day3.c  day4.c  day5.c  day6.c  day7.c  utils.c  utils.h
2022/: .gitignore  CMakeLists.txt
2022/src/: common.h  day1.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day2.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day3.cpp  day4.cpp  day5.cpp  day6.cpp  day7.cpp  day8.cpp  day9.cpp
2023/src/: day1.zig  day10.zig  day11.zig  day12.zig  day13.zig  day14.zig  day15.zig  day16.zig  day17.zig  day18.zig  day19.zig  day2.zig  day20.zig  day21.zig  day3.zig  (+8 more)
2025/: README.md  day1.odin  day10.odin  day11.odin  day12.odin  day2.odin  day3.odin  day4.odin  day5.odin  day6.odin  day7.odin  day8.odin  day9.odin  main.odin
(+32 files in other folders)
